<resources>
    <string name="app_name">ART Deoptimiser</string>
    <string name="placeholder">Placeholder</string>
    <string name="package_deoptimised">Deop</string>
    <string name="package_debug">Debug</string>
    <string name="trigger_deoptimised">Deoptimised</string>
    <string name="trigger_debuggable">Debuggable</string>
    <string name="package_snaptools">Not Installed</string>
    <string name="package_shameless_advert">Shameless Advert</string>
    <string name="package_snaptools_text">This application is brought to you by the makers of SnapTools, if you like this app and use Snapchat, maybe consider trying it out! :)</string>
    <string name="greeting_message">This application provides the ability to disable the ART Optimisations performed by android to speed applications up</string>
    <string name="greeting_title">Welcome to ART Deoptimiser</string>
    <string name="generate_data_failed">Failed to generate package data</string>
    <string name="old_android_title">Incompatible Android Version</string>
    <string name="old_android_message">ART Deoptimiser does nothing for android versions below Nougat.\nAs a result, this application will not run on this device</string>
    <string name="permission_request_msg">This application requires External Storage Read/Write access. Without these permissions the application will terminate</string>
    <string name="permission_request_title">Permissions Request</string>
    <string name="permission_denied_title">Permission Request Denied</string>
    <string name="permission_denied_message">As you\'ve declined a vital permission request the application will terminate</string>
    <string name="menu_sys_apps">Show System Apps</string>
    <string name="menu_show_legal">Legal</string>
    <string name="title_activity_legal">LegalActivity</string>

    <string name="legal">
        <font color="#EEEEEE"><b>Google Gson</b></font>\n
        <font color="#777777">Copyright 2008 Google Inc.\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</font>\n\n


        <font color="#EEEEEE"><b>Jake Wharton\'s Butterknife</b></font>\n
        <font color="#777777">Copyright 2013 Jake Wharton\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</font>\n\n


        <font color="#EEEEEE"><b>Aidan Michael Follestad\'s Material Dialog</b></font>\n
        <font color="#777777">Copyright (c) 2014-2016 Aidan Michael Follestad\n\n

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\n

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\n

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</font>\n\n


        <font color="#EEEEEE"><b>Xposed Framework</b></font>\n
        <font color="#777777">Copyright 2014 rovo89, Tungstwenty\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
            limitations under the License.</font>\n\n\n


        <font color="#EEEEEE"><b>Android Shell</b></font>\n
        <font color="#777777">Copyright (C) 2016 Jared Rummler\n
Copyright (C) 2012-2015 Jorrit "Chainfire" Jongma\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</font>\n\n\n

        <font color="#EF8686"><b>Why do you people read this shit?</b></font>
    </string>
    <string name="toggle_hint_title">Reinstall Required</string>
    <string name="toggle_hint_message"><![CDATA[For changes to take affect, the app requires a complete uninstall & reinstall]]></string>
    <string name="menu_add_manual">Manual Package</string>
    <string name="manual_package_label">Create package setting manually</string>
    <string name="manual_package_hint">Package (com.example.app)</string>
</resources>
